# urdf2mjcf

./: .gitignore  README.md  RELEASE.md  _utils.py  config_template.json  pyproject.toml
doc/: dae_material_implementation.md  plan.html  todo.md
tests/: test_api.py  test_extract_dae_meshes.py  test_mjcf_postprocess.py  test_urdf_preprocess.py  test_utils.py
urdf2mjcf/: __init__.py  api.py  cli.py  convert.py  converter.py  mesh_ops.py  mjcf_postprocess.py  urdf_preprocess.py  xml_utils.py
urdf2mjcf/tools/: README.md  __init__.py  calculate_inertia.py  extract_dae_meshes.py  generate_collision_mesh.py  simplify_mesh.py
