[project]
name = "urdf2mjcf"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Hoang", email = "hoangmrt@schaeffler.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.3.6",
    "pymeshlab>=2025.7",
    "trimesh[easy]>=4.0.0",
    "open3d>=0.18.0",
    "coacd>=1.0.7",
    "pycollada>=0.8",
    "tqdm>=4.67.1",
    "rich>=14.2.0",
]

[project.scripts]
urdf2mjcf = "urdf2mjcf.cli:main"
urdf2mjcf-calculate-inertia = "urdf2mjcf.tools.calculate_inertia:main"
urdf2mjcf-simplify-mesh = "urdf2mjcf.tools.simplify_mesh:main"
urdf2mjcf-generate-collision = "urdf2mjcf.tools.generate_collision_mesh:main"
urdf2mjcf-extract-dae = "urdf2mjcf.tools.extract_dae_meshes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
